--- a/index.html
+++ b/index.html
@@ -34,21 +34,50 @@
 
       <div id="menu">
         <p id="projButton">Projects</p>
+        <div id="projSection" class="collapsed">
+          <div>Personal Website</div>
+          <p>
+            Coded from scratch as a hobby project, this website utilizes the skills learnt in CSE 154
+            such as HTML, Javascript, and CSS. In addition, PHP is used to retrieve data dynamically
+            from a server.
+          </p>
+        </div>
+
         <p id="expButton">Experience</p>
+        <div id="expSection" class="collapsed">
+          <div>EasyIoT Intern</div>
+          <p>
+            Unpaid Internship.
+          </p>
+        </div>
+
         <p id="skillButton">Skills</p>
+        <div id="skillSection" class="collapsed">
+          <div>Programming Languages</div>
+          <p>
+            Java, C, C#, HTML, Javascript, CSS, PHP, SQL
+          </p>
+        </div>
+
         <p id="extButton">Extras</p>
+        <div id="extSection" class="collapsed">
+          <div>Husky Boxing Team</div>
+          <p>
+            KO first fight.
+          </p>
+        </div>
       </div>
 
-    <footer>
+      <footer>
         Contact me:
         <br>
-          <p>
-            nkchia@uw.edu
-            <br>
-            702-415-5203
-            <br>
-            linkedin.com/in/nkchia
-          </p>
-    </footer>
-  </body>
+        <p>
+          nkchia@uw.edu
+          <br>
+          702-415-5203
+          <br>
+          linkedin.com/in/nkchia
+        </p>
+      </footer>
+    </body>
 </html>
