--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <title>Ning</title>
     <meta charset="utf-8"/>
-    <link href="myweb.css" type="text/css" rel="stylesheet"/>
+    <link href="tmpcss.css" type="text/css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Aleo|Major+Mono+Display|Noto+Serif+TC" rel="stylesheet">
-    <script src="myweb.js"></script>
+    <script src="tmpjs.js"></script>
   </head>
 
   <body>
@@ -35,36 +35,104 @@
       <div id="menu">
         <p id="projButton">Projects</p>
         <div id="projSection" class="collapsed">
-          <div>Personal Website</div>
-          <p>
-            Coded from scratch as a hobby project, this website utilizes the skills learnt in CSE 154
-            such as HTML, Javascript, and CSS. In addition, PHP is used to retrieve data dynamically
-            from a server.
-          </p>
+          <div class="sectionElement">
+            <h1>Personal Website</h1>
+            <p>
+              Coded from scratch to serve as an indepth introduction of myself,
+              this website utilizes the skills learnt in CSE 154 such as HTML,
+              Javascript, and CSS without help from external libraries.
+            </p>
+          </div>
         </div>
 
         <p id="expButton">Experience</p>
         <div id="expSection" class="collapsed">
-          <div>EasyIoT Intern</div>
-          <p>
-            Unpaid Internship.
-          </p>
+          <div class="sectionElement">
+            <h1>EasyIOT Software Intern</h1>
+            <p>
+              Summer 2018, I developed an API that allowed the company's lightbulbs
+              and switches to communicate with Google Home and Amazon Alexa via
+              voice recognition. In addition, I also created a visual interface to
+              display information of the appliances power consumption, HUE, and brightness.
+            </p>
+          </div>
         </div>
 
         <p id="skillButton">Skills</p>
         <div id="skillSection" class="collapsed">
-          <div>Programming Languages</div>
-          <p>
-            Java, C, C#, HTML, Javascript, CSS, PHP, SQL
-          </p>
+          <div class="sectionElement">
+            <h2>Relevant Classes</h2>
+            <ul>
+              <li>CSE143</li>
+              <li>CSE154</li>
+              <li>CSE311</li>
+              <li>CSE312</li>
+              <li>CSE351</li>
+              <li>CSE332</li>
+              <li>CSE333</li>
+            </ul>
+          </div>
+
+          <hr>
+
+          <div class="sectionElement">
+            <h1>Proficient Programming Languages</h1>
+            <p>
+              Java, C, C++, C#, HTML, CSS, Javascript, PHP, SQL
+            </p>
+          </div>
+
+          <hr>
+
+          <div class="sectionElement">
+            <h2>Fluent Languages</h2>
+            <ul>
+              <li>English</li>
+              <li>Mandarin</li>
+              <li>Malay</li>
+              <li>
+                Japanese (Learning it right now with the goal of
+                taking a test of gurantee of working level, the N5 test).
+              </li>
+            </ul>
+          </div>
         </div>
 
         <p id="extButton">Extras</p>
         <div id="extSection" class="collapsed">
-          <div>Husky Boxing Team</div>
-          <p>
-            KO first fight.
-          </p>
+          <div class="sectionElement">
+            <h1>Alpha Phi Omega</h1>
+            <p>
+              Proud member of a national service fraternity, I pledged loyalty
+              to serve and better the world. I regularly commit to service Projects
+              such as street cleanups and charity events. Our goal this year
+              is the spreading of awareness regarding diabetes.
+            </p>
+          </div>
+
+          <hr>
+
+          <div class="sectionElement">
+            <h1>Husky Boxing Team</h1>
+            <p>
+              I competed for the University of Washington in NCBA
+              (National Collegiate Boxing Association) matches. The team
+              focuses on servant leadership, with its mantra of
+              "Pride, Poise, Team, and Family".
+            </p>
+          </div>
+
+          <hr>
+
+          <div class="sectionElement">
+            <h1>HFS Student Assistant</h1>
+            <p>
+              I worked part time at the District Market that is managed under
+              the Housing Foods and Services Group of University of Washington.
+              There, I operated both front of house duties (Cashiering, stocking, produce),
+              as well as back of house duties (Food-prep, Deli-Case Service, Dish Washing).
+            </p>
+          </div>
         </div>
       </div>
 
