--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <title>Ning</title>
     <meta charset="utf-8"/>
-    <link href="myweb.css" type="text/css" rel="stylesheet"/>
+    <link href="mycss.css" type="text/css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Aleo|Major+Mono+Display|Noto+Serif+TC" rel="stylesheet">
-    <script src="myweb.js"></script>
+    <script src="myjs.js"></script>
   </head>
 
   <body>
@@ -63,13 +63,13 @@
           <div class="sectionElement">
             <h2>Relevant Classes</h2>
             <ul>
-              <li>CSE143</li>
-              <li>CSE154</li>
-              <li>CSE311</li>
-              <li>CSE312</li>
-              <li>CSE351</li>
-              <li>CSE332</li>
-              <li>CSE333</li>
+              <li>CSE143 Computer Programming II</li>
+              <li>CSE154 Web Programming</li>
+              <li>CSE311 Foundations of Computing I (Logic)</li>
+              <li>CSE312 Foundations of Computing II (Statistics)</li>
+              <li>CSE351 Hardware Software interface</li>
+              <li>CSE332 Data Structures and Parallelism</li>
+              <li>CSE333 Systems Programming</li>
             </ul>
           </div>
 
@@ -149,3 +149,4 @@
       </footer>
     </body>
 </html>
+
