--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <title>Ning</title>
     <meta charset="utf-8"/>
-    <link href="mycss.css" type="text/css" rel="stylesheet"/>
+    <link href="myweb.css" type="text/css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Aleo|Major+Mono+Display|Noto+Serif+TC" rel="stylesheet">
-    <script src="myjs.js"></script>
+    <script src="my.js"></script>
   </head>
 
   <body>
