--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8"/>
     <link href="myweb.css" type="text/css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Aleo|Major+Mono+Display|Noto+Serif+TC" rel="stylesheet">
-    <script src="my.js"></script>
+    <script src="myweb.js"></script>
   </head>
 
   <body>
